--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,8 @@
         android:id="@+id/recycler_view_movies"
         android:layout_marginTop="64dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:padding="8dp"/>
 
     <TextView
         android:id="@+id/text_view_error"
